mule-user-guide/v/3.5/mapping-elements-inside-lists.adoc
= 在列表中映射元素

[集合]将数据项组合在一个消息有效载荷中。 Anypoint DataMapper支持复杂的映射和转换操作，包括输入和输出为不同数据格式的复杂嵌套结构的操作。

在映射列表中的元素之前，您必须首先将列表本身映射到输出对象或列表。一旦输入列表映射到输出对象或列表，您可以映射其各个子元素。

创建一系列映射输入列表到输出列表的映射元素映射，然后映射它们的子元素，您可以最终映射复杂结构中任意级别的数据元素，并通过输入和输出中的嵌套级别降低工作量。

本文档使用两个示例来演示如何映射列表中的元素：

*  [将嵌套列表映射到平面文件（XML到CSV）]
*  [将嵌套列表映射到结构化数据文件（XML到JSON）]

这两个示例都需要顺序完成以下高级任务：

. 创建示例输入文件。

. 创建示例输出文件。

. 将Anypoint DataMapper添加到流中。

. 映射数据。

== 将嵌套列表映射到平面文件格式

=== 创建示例XML输入文件

. 在文本编辑器中创建一个新的文本文件，然后在其中粘贴以下内容：

[source, xml, linenums]
----
<contact_list type="members" id="id0">
  <contacts>
    <user name="John" lastname="Harrison" phone="2013 0517"/>
    <user name="Jane" lastname="Doe" phone="2222 2222"/>
    <user name="Harry" lastname="Hausen" phone="3333 3333"/>
  </contacts>
  <emergency_contacts>
    <user name="Larry" lastname="Larson" phone="4444 4444"/>
    <user name="Harry" lastname="Harrison" phone="5555 5555"/>
    <user name="John" lastname="Johnson" phone="6666 6666"/>
  </emergency_contacts>
</contact_list>
----

. 使用有用的描述性名称将文件保存到方便的位置，例如`InputList.xml`。这用作两个示例的输入XML文件。

=== 创建示例CSV输出文件

. 创建另一个下一个文本文件，然后将其粘贴到以下内容中：

[source, code, linenums]
----
Name,Lastname,Phone
----

. 使用有用的名称将文件保存在方便的位置，例如`Output.csv`。这个简单的CSV文件为DataMapper提供了输出数据字段。配置DataMapper构建块时，您可以修改这些字段。

将数据映射器添加到流中=== 

以下过程提供了将DataMapper添加到流程的缩略步骤。有关详细说明，请参阅DataMapper用户指南和参考。

. 从*Palette*中的*Transformer*组中，将*DataMapper*构建块拖动到可以接收输入的位置 - 例如文件连接器的右侧。

. 单击DataMapper图标打开其*Properties Editor*。

. 在*Name*字段中，为您的DataMapper键入一个有用的描述性名称。

. 在*Select Input and Output Type*窗格的*Input*部分，使用*Type*字段旁边的下拉菜单选择*XML*。

. 在*Select Input and Output Type*窗口的*Output*部分，使用*Type*字段旁边的下拉菜单选择*CSV*。

. 在*Output*部分中，点击*CSV example*字段旁边的省略号（...）。

. 使用文件浏览器选择您创建的CSV输出文件。

. 点击*Create Mapping*，将配置加载到*DataMapper Console*中（参见下图）
+
image:image2013-4-16+14%3A4%3A59.png[image2013-4-16 + 14％3A4％3A59]

*Element Mapping*选择器（中心）显示初始元素映射`For Each 'contact_list' -> 'output'`。

左侧的*Input*窗格显示输入XML文件的根元素`contact_list`。虚线将`contact_list`连接到*Output*窗格中的`csv`根元素。此虚线表示对于映射到子元素映射的`contact list`中的每个嵌套元素，DataMapper应在`csv`中创建一个条目。

右侧的*Output*窗格显示输出元素列表。最上面的项目代表`csv`输出文件，它可以理解为行列表，每行都包含单个字段Name，LastName和Phone。在这种情况下，输出中没有嵌套列表，因为输出格式是平坦的。

=== 映射数据

. 点击*Input*窗格中的"eye"图标（请参见下面的顶部），以显示列表中的各个元素。 XML文件`contacts`和`emergency_contacts`中的两个嵌套列表显示其各自的子元素（位于底部下方）。
+
image:image2013-4-16+14%3A9%3A32.png[image2013-4-16 + 14％3A9％3A32]
+
image:image2013-4-16+14%3A33%3A18.png[image2013-4-16 + 14％3A33％3A18]

. 将鼠标悬停在*input attribute*上，并用蓝色"e"图标标识。 Mule显示一个工具提示，提示*output pane*中哪些元素可以映射属性。
+
image:image2013-4-16+14%3A36%3A47.png[image2013-4-16 + 14％3A36％3A47]

. 单击，然后将`user : UserType`元素从输入窗格拖到输出窗格中的`csv`根元素。其影响是：

* 创建一个映射`Foreach 'user' -> 'csv'`的新元素，将`emergency_contacts/user`嵌套列表映射到CSV根元素。

* 自动映射将`user`下的所有单个字段映射到CSV中具有匹配名称的字段。

*  DataMapper显示反映这些新映射的所有箭头。
+
image:image2013-4-16+14%3A41%3A27.png[image2013-4-16 + 14％3A41％3A27]

请注意，输入XML文件中的另一个嵌套列表 -  `contacts`  - 也显示一个用户元素，但这个元素未映射。

要预览映射的行为而不运行整个映射流，请单击输出窗格上方的*Preview*：+
 +
image:image2013-4-16+15%3A31%3A11.png[image2013-4-16 + 15％3A31％3A11]

对于*Input Data*，输入样本输入XML文件的路径，然后点击*Run*查看输出。

[source, code, linenums]
----
Larry,Larson,4444 4444
Harry,Harrison,5555 5555
John,Johnson,6666 6666
----

作为`emergency_contacts`映射的结果，CSV输出包含与`emergency_contacts`列表相对应的行。没有普通`contacts`元素的映射，因此CSV中的`user`元素没有输出。

[TIP]
请参阅[在示例数据上预览DataMapper结果]了解如何生成映射的预览。

== 将嵌套XML列表映射到嵌套JSON列表

在这个例子中，Mule将数据从XML映射到JSON。后者支持简单的数据结构和关联数组（大致使用键和值，因为XML使用属性名称和属性值）。这个例子展示了结构化数据的一种表示如何转换为另一种表示。

=== 创建示例XML输入文件

如果您尚未创建示例XML文件，请完成[上述步骤]中的步骤。

=== 创建示例JSON输出文件

. 在文本编辑器中创建一个新文件，然后将其粘贴到以下内容中：
+
[source, code, linenums]
----
{
  "type": "members",
  "id": "id0",
  "contacts": [
    {
      "name": "",
      "lastname": ""
    },
    {
      "name": "",
      "lastname": ""
    },
  ],
  "emergencyContacts": [
    {
      "name": "",
      "lastname": ""
    },
  ]
}
----

. 使用有用的描述性名称将文件保存到方便的位置。此JSON文件为DataMapper提供输出数据字段。

=== 将DataMapper添加到流中

. 按照前面示例中的*Add DataMapper to a Flow*过程的步骤1  -  7进行操作。 （如果您已完成前面的示例，则DataMapper向导会询问您是否要覆盖XML模式文件，覆盖该文件是安全的;点击*Ok*。）

. 在*Select Input and Output Type*窗口的*Output*部分，使用*Type*字段旁边的下拉菜单选择*JSON*。

. 在*Output*部分中，单击JSON示例字段旁边的省略符号（...）。

. 使用文件浏览器选择您创建的JSON文件。

. 点击*Finish*将配置加载到*DataMapper Console*（请参阅下图）
+
image:image2013-4-16+16%3A0%3A28.png[image2013-4-16 + 16％3A0％3A28]

=== 映射数据

. 点击*Input*窗格或*Output*窗格中的"eye"图标，分别显示XML列表和JSON对象中的子元素（请参见下图）。
+
image:image2013-4-16+16%3A15%3A44.png[image2013-4-16 + 16％3A15％3A44]
+
在上面的屏幕截图中，*Output*映射窗格包含两个嵌套列表：`contacts`和`emergencyContacts`。 Mule从示例JSON文件中读取这些列表的名称。
+
请注意，每个列表的子元素（在输入窗格和输出窗格中）都呈灰色。在您可以将各个列表元素映射到彼此之前，您必须首先映射列表（以粗体显示）。

. 单击，然后将输入窗格中的`emergencyContacts`下的`user : user`元素拖动到输出窗格中的`emergencyContacts:emergencyContacts`元素。
+
这样做的影响是：
+
* 创建一个新的元素映射，将XML输入中的`emergency_contact/user`列表映射到JSON输出中的`object/emergencyContracts`列表;
+
image:image2013-4-16+17%3A19%3A44.png[image2013-4-16 + 17％3A19％3A44]
+
*  DataMapper自动将具有匹配名称的`emergency_contacts/user`的所有子项映射到`emergencyContacts`的子项
+
image:image2013-4-16+16%3A17%3A16.png[image2013-4-16 + 16％3A17％3A16]

. 请注意，DataMapper映射`name`和`lastname`而不是`phone`。示例JSON文件不包含名为`phone`的字段或属性。要包含紧急联系人的电话号码，请为`phone`创建新的属性，然后通过拖放将电话输入属性映射到新的输出属性。
+

[TIP]
====
*Add a New Metadata Field*

完成以下步骤以在输出窗格中创建新字段。

.. 在输出窗格中，右键单击`emergencyContacts`列表，然后选择*Add Metadata Field*。
+
image:image2013-4-16+16%3A18%3A47.png[image2013-4-16 + 16％3A18％3A47]

.. 填写新的属性对话框：

*** 对于*Type*，选择*Attribute*。
*** 对于*New Attribute*窗口中的*Name*字段，输入属性的名称。
*** 对于*Configuration*  - > *Type*，选择*string*。
+
image:image2013-4-16+16%3A20%3A21.png[image2013-4-16 + 16％3A20％3A21]

.. 点击*Ok*。新的`phone`属性在JSON输出文件中创建。

.. 点击输入窗格中的`phone`元素，然后将其拖动到输出窗格中新创建的`phone`键。
+
image:image2013-4-16+16%3A22%3A33.png[image2013-4-16 + 16％3A22％3A33]
====


. 下一步是将XML中的`contacts`元素映射到JSON中的对应元素。
+
为了映射`contacts`项目，首先我们必须选择父项之间的元素映射 -  `ForEach 'contact_list' to 'object'`元素映射。使用元素映射控件进行选择：
+
image:image2013-4-16+17%3A49%3A44.png[image2013-4-16 + 17％3A49％3A44]
+
映射编辑器将更新以专注于此映射：
+
image:image2013-4-16+17%3A50%3A33.png[image2013-4-16 + 17％3A50％3A33]
+
当您在DataMapper向导中完成配置时，数据映射器会自动创建最高级别 -  contact_list_to_object。此级别将XML输入文件`<contact_list_type='members' id='id0'>`映射到JSON输出文件：
+
[source, json, linenums]
----
{
  "type" : "members",
  "id" : "id0",
[...]
 
}
----
+
点击`contacts/user`列表，然后将其拖至`contacts`输出列表以映射这些元素：
+
image:image2013-4-16+17%3A53%3A12.png[image2013-4-16 + 17％3A53％3A12]
+
其影响是：

*  DataMapper将`newForEach 'user' -> 'contacts'`映射添加到*Element Mapping*下拉菜单;

* 将`'user'`中的输入属性自动映射到`'contacts'`中的匹配输出字段
+
此时您已将所有XML输入字段映射到其对应的JSON输出字段。最终的DataMapper视图应该如下图所示。您可以检查每个元素映射以查看它们是否匹配。
+
image:image2013-4-16+18%3A0%3A41.png[image2013-4-16 + 18％3A0％3A41]
+
映射的输出应该如下所示：
+
[source, code, linenums]
----
{
  "type" : "members",
  "id" : "id0",
  "emergencyContacts" : [ {
    "name" : "Larry",
    "lastname" : "Larson",
    "phone" : "4444 4444"
  }, {
    "name" : "Harry",
    "lastname" : "Harrison",
    "phone" : "5555 5555"
  }, {
    "name" : "John",
    "lastname" : "Johnson",
    "phone" : "6666 6666"
  } ],
  "contacts" : [ {
    "name" : "John",
    "lastname" : "Harrison"
  }, {
    "name" : "Jane",
    "lastname" : "Doe"
  }, {
    "name" : "Harry",
    "lastname" : "Hausen"
  } ]
}
----
+
[TIP]
要生成映射预览，请点击DataMapper视图中的*Preview*标签，然后点击*Run Mapping*。有关详细信息，请参阅[在示例数据上预览DataMapper结果]。
